# artificial-intelligence

./: README.md  README.org  breast_cancer_practice.py  pyproject.toml
ai-research-prep/: FirstNotebook.ipynb
ai-research-prep/.ipynb_checkpoints/: FirstNotebook-checkpoint.ipynb
algorithms/neural_networks/: forward_pass.py~
lectures/: exploratory_data_analysis.ipynb  exploratory_data_analysis.md  introduction_to_neural_networks.org
libraries/numpy/: array_processing_en.py  array_processing_ptbr.py
libraries/scikit-learn/: README.html  breast_cancer_knn.py
machine-learning-with-sklearn/: README.org  breast_cancer_knn.py  iris_classifier_en.py  iris_classifier_ptbr.py  iris_pandas_eda_en.py  iris_pandas_eda_ptbr.py
mnist_idx_parser/: README.org  train_labels_parser.py
neural_networks/: forward_pass.py
rosenblatt-perceptron/: README.org
