[project]
name = "artificial-intelligence"
version = "0.1.0"
description = "A collection of personal research and empirical experiments in AI"
readme = "README.org"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.8.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
